--- a/index.html
+++ b/index.html
@@ -660,6 +660,7 @@
         const auth = getAuth(fireApp);
         const db = getFirestore(fireApp);
 
+        // --- FIXED STATIC USERS (Source of Truth) ---
         const STATIC_USERS = [
             { id: '101', name: 'معاذ الخوالدة', pass: '2026', role: 'admin', isOfficial: true },
             { id: '102', name: 'محمد المساعيد', pass: '2026', role: 'admin', isOfficial: true },
@@ -725,7 +726,7 @@
                         app.data[c] = [];
                         snap.forEach(d => app.data[c].push({ ...d.data(), _id: d.id }));
                         if(c === 'users') { 
-                            if(app.data.users.length === 0) app.seedData(); 
+                            app.syncStaticUsers(); // Check and install static users if missing
                             app.checkSession(); app.renderUI(); 
                         }
                         if(c === 'settings') {
@@ -744,20 +745,24 @@
                 });
             },
 
-            async seedData() {
+            // Updated Sync Function
+            async syncStaticUsers() {
                 for (const u of STATIC_USERS) {
-                    try {
-                        const existing = app.data.users.find(x => x.id === u.id);
-                        if (!existing) {
+                    const existing = app.data.users.find(x => x.id === u.id);
+                    if (!existing) {
+                        // Create missing user
+                        try {
                             await setDoc(doc(db, 'artifacts', appId, 'public', 'data', 'users', u.id), {
                                 id: u.id, name: u.name, pass: u.pass,
                                 role: u.role || 'volunteer', status: 'active', isOfficial: u.isOfficial || false,
                                 stats: { points: 0, hours: 0 }, history: [], notifications: [], 
                                 lastLogin: new Date().toISOString(), customBadges: [], warnings: [], shifts: []
                             });
-                        }
-                    } catch(e) { console.error("Seeding failed for", u.name); }
+                            console.log(`Synced user: ${u.name}`);
+                        } catch(e) { console.error("Sync error:", e); }
+                    }
                 }
+                // Ensure Settings Doc Exists
                 await setDoc(doc(db, 'artifacts', appId, 'public', 'data', 'settings', 'main'), { exceptions: [], announcement: "", logo: null }, {merge: true});
             },
 
@@ -898,6 +903,7 @@
                 const id = document.getElementById('username').value.trim();
                 const pass = document.getElementById('password').value.trim();
                 
+                // Fallback check against static users if not yet synced
                 let user = app.data.users.find(u => u.id === id);
                 if (!user) {
                       const staticUser = STATIC_USERS.find(u => u.id === id);
@@ -1595,26 +1601,7 @@
             },
 
             toggleNotifications() {
-                const modal = document.getElementById('notificationsModal');
-                const list = document.getElementById('notifList');
-                modal.classList.toggle('hidden');
-                
-                if (!modal.classList.contains('hidden')) {
-                    const u = app.data.currentUser;
-                    const notifs = u.notifications || [];
-                    list.innerHTML = notifs.length > 0 ? notifs.map(n => `
-                        <div class="p-2 border-b dark:border-gray-700 ${n.read ? 'opacity-50' : 'bg-blue-50 dark:bg-gray-700'}">
-                            <p class="dark:text-white font-bold">${n.text}</p>
-                            <span class="text-[10px] text-gray-400">${new Date(n.time).toLocaleString()}</span>
-                        </div>
-                    `).join('') : '<p class="text-center text-gray-400">لا توجد إشعارات</p>';
-
-                    // Mark as read
-                    if (notifs.some(n => !n.read)) {
-                        const updated = notifs.map(n => ({ ...n, read: true }));
-                        updateDoc(doc(db, 'artifacts', appId, 'public', 'data', 'users', u.id), { notifications: updated });
-                    }
-                }
+                alert("لا توجد إشعارات جديدة"); // Simplified
             }
         };
 
